# USBPowerSwitch

./: .gitignore  Cargo.toml  README.md  relay_control.py
asm-relay/: .gitignore  BUILD-SCRIPTS.md  BUILDING.md  DEBUG-README.txt  FEATURES.md  Makefile  QUICK-START-WINDOWS.bat  README-WINDOWS.md  README.md  build-all.bat  build-debug.bat  build-windows.bat  build.bat  quick-build.sh  relay.asm  relay_win.asm  relay_win_debug.asm  watch-build.sh
src/: main.rs
